--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -99,6 +99,10 @@
   color: var(--color-white);
 }
 
+.app__navbar-smallscreen_links li:active {
+  color: var(--color-white);
+}
+
 @media screen and (max-width: 2000px) {
   .app__navbar-logo img {
     width: 210px;
