--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,10 @@
 }
 
 .app__bg {
-  background: url('./assets/bg.png');
+  /* background: url("./assets/test__bg.png"); */
+  background: url("./assets/bg.jpg");
+  /* background-color: rgb(105, 105, 105); */
+  /* background: url('./assets/bg.png'); */
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
@@ -49,22 +52,22 @@
 }
 
 .app__wrapper_img img {
-  width: 80%;
+  width: 65%;
 }
 
 .custom__button {
   background-color: var(--color-crimson);
-    color: var(--color-black);
-    font-family: var(--font-base);
-    font-weight: 700;
-    letter-spacing: 0.04em;
-    line-height: 28px;
-    font-size: 16px;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1px;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  color: var(--color-black);
+  font-family: var(--font-base);
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  line-height: 28px;
+  font-size: 20px;
+  padding: 0.5rem 1.5rem;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .p__cormorant {
@@ -73,7 +76,7 @@
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-  font-feature-settings: 'tnum' on, 'lnum' on;
+  font-feature-settings: "tnum" on, "lnum" on;
   line-height: 29.9px;
   font-size: 23px;
 }
@@ -85,12 +88,21 @@
   letter-spacing: 0.04em;
   text-transform: capitalize;
   line-height: 28px;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 .headtext__cormorant {
   font-family: var(--font-base);
   color: var(--color-golden);
+  font-size: 64px;
+  line-height: 83.2px;
+  letter-spacing: 0.04em;
+  text-transform: capitalize;
+}
+
+.headtext__cormorant_tets {
+  font-family: var(--font-base);
+  color: var(--color-black);
   font-size: 64px;
   line-height: 83.2px;
   letter-spacing: 0.04em;
@@ -113,7 +125,8 @@
     line-height: 50px;
   }
 
-  .headtext__cormorant {
+  .headtext__cormorant,
+  .headtext__cormorant_tets {
     font-size: 150px;
     line-height: 210px;
   }
@@ -124,11 +137,17 @@
 }
 
 @media screen and (max-width: 1150px) {
+  .app__bg {
+    background: url("./assets/bg.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: repeat;
+  }
   .app__wrapper {
     flex-direction: column;
   }
 
-  .app__wrapper_img { 
+  .app__wrapper_img {
     margin: 5rem 0 0 0;
   }
 
@@ -151,26 +170,27 @@
   .section__padding {
     padding: 4rem 2rem;
   }
-  
+
   .p__cormorant {
     font-size: 21px;
   }
 
   .p__opensans {
-    font-size: 14px;
+    font-size: 20px;
   }
 }
 
 @media screen and (max-width: 450px) {
   .p__opensans {
-    font-size: 12px;
+    font-size: 15px;
   }
 
   .p__cormorant {
     font-size: 19px;
   }
 
-  .headtext__cormorant {
+  .headtext__cormorant,
+  .headtext__cormorant_tets {
     font-size: 45px;
     line-height: 70px;
   }
