--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   z-index: 3;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-black);
+  background: var(--color-black_navbar);
   padding: 1rem 2rem;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .app__navbar-logo img {
-  width: 150px;
+  width: 40px;
 }
 
 .app__navbar-links {
@@ -24,6 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
   list-style: none;
 }
 
@@ -33,7 +34,7 @@
 }
 
 .app__navbar-links li:hover {
-  color: var(--color-grey);
+  color: var(--color-golden);
 }
 
 .app__navbar-login {
@@ -45,7 +46,7 @@
 .app__navbar-login a {
   margin: 0 1rem;
   text-decoration: none;
-  transition: 0.5s ease;
+  transition: .5s ease;
 }
 
 .app__navbar-login a:hover {
@@ -55,7 +56,7 @@
 .app__navbar-login div {
   width: 1px;
   height: 30px;
-  background-color: var(--color-grey);
+  background: var(--color-grey);
 }
 
 .app__navbar-smallscreen {
@@ -69,7 +70,8 @@
   width: 100%;
   height: 100vh;
   background: var(--color-black);
-  transition: 0.5s ease;
+  transition: .5s ease;
+
   flex-direction: column;
   z-index: 5;
 }
@@ -101,36 +103,40 @@
   color: var(--color-white);
 }
 
-.app__navbar-smallscreen_links li:active {
-  color: var(--color-white);
-}
-
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
   .app__navbar-logo img {
-    width: 210px;
+      width: 50px;
   }
+
 }
 
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
-    display: none;
+      display: none;
   }
 
   .app__navbar-smallscreen {
-    display: flex;
+      display: flex;
   }
+
+  .app__navbar-logo img {
+    width: 30px;
+}
 }
 
 @media screen and (max-width: 650px) {
   .app__navbar {
-    padding: 1rem;
+      padding: 0.5rem;
+      z-index: 2;
+
   }
 
   .app__navbar-login {
-    display: none;
+      display: none;
   }
 
-  .app__navbar-login img {
-    width: 110px;
+  .app__navbar-logo img {
+      width: 30px;
   }
+
 }
