--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 
 .app__chef-content_quote {
@@ -19,13 +19,13 @@
 
 .app__chef-sign {
     width: 100%;
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 
 .app__chef-sign p:first-child {
     font-family: var(--font-base);
     font-weight: 400;
-    font-size: 32;
+    font-size: 32px;
     line-height: 41px;
     letter-spacing: 0.04em;
     text-transform: capitalize;
@@ -39,12 +39,12 @@
 
 @media screen and (max-width: 2000px) {
     .app__chef-sign img{
-        width: 370px;
+        width: 100px;
     }
 }
 
 @media screen and (max-width: 450px) {
     .app__chef-sign img{
-        width: 80%;
+        width: 50px;
     }
 }
