--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -1,12 +1,12 @@
 .app__gallery {
-  display: flex;
   flex-direction: row;
+
   background: var(--color-black);
   padding: 4rem 0 4rem 6rem;
 }
 
 .app__gallery-content {
-  flex: 1 1 auto;
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -34,7 +34,7 @@
   width: max-content;
   overflow-x: scroll;
   -ms-overflow-style: none;
-  scrollbar-width: none;
+  scrollbar-width: none;  
 }
 
 .app__gallery-images_container::-webkit-scrollbar {
@@ -52,7 +52,7 @@
   position: absolute;
   color: #fff;
   font-size: 2rem;
-  opacity: 0.5;
+  opacity: 0;
   transition: 0.5s ease;
   cursor: pointer;
 }
@@ -62,7 +62,7 @@
   height: 100%;
   object-fit: cover;
   opacity: 1;
-  transition: 0.5s ease;
+  transition: .5s ease;
 }
 
 .app__gallery-images_card:hover img {
@@ -70,7 +70,7 @@
 }
 
 .app__gallery-images_card:hover .gallery__image-icon {
-  opacity: 2;
+  opacity: 1;
 }
 
 .app__gallery-images_arrows {
@@ -78,68 +78,74 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 0 1rem; */
-  padding:  25% 1%;
+
+  /* padding: 25% 4% 27% 0%; */
   position: absolute;
   bottom: 5%;
 }
 
 .gallery__arrow-icon {
-  color: var(--color-golden);
+  color: var(--color-white);
+  /* color: var(--color-golden); */
   font-size: 2rem;
   cursor: pointer;
-  background-color: var(--color-black);
-  border-radius: 5px;
+  background: var(--color-black);
+  border: 1px solid var(--color-golden);
+  border-radius: 50px;
 }
 
 .gallery__arrow-icon:hover {
-  color: var(--color-white);
+  color: var(--color-golden);
 }
 
 @media screen and (min-width: 2000px) {
+  .app__gallery-content button {
+      margin-top: 2rem;
+  }
+
   .app__gallery-content {
-    min-width: 1000px;
-    padding: 4rem;
+      min-width: 1000px;
+      padding-right: 4rem;
   }
 
   .app__gallery-images_card {
-    min-width: 400px;
-    height: 550px;
+      min-width: 400px;
+      height: 547px;
   }
 }
 
 @media screen and (max-width: 1150px) {
   .app__gallery {
-    flex-direction: column;
+      flex-direction: column;
   }
 
   .app__gallery-images {
-    max-width: 100%;
-    margin: 5rem 0;
+      max-width: 100%;
+      margin: 5rem 0;
   }
 }
 
 @media screen and (max-width: 850px) {
   .app__gallery {
-    padding: 4rem 0 4rem 4rem;
+      padding: 4rem 0 4rem 4rem;
   }
 }
 
 @media screen and (max-width: 650px) {
   .app__gallery {
-    padding: 4rem 0 4rem 2rem;
-  }
-
+      padding: 4rem 0 4rem 2rem;
+  }  
+  
   .app__gallery-content {
-    min-width: 100%;
+      min-width: 100%;
   }
 
   .app__gallery-images_card {
-    min-width: 240px;
-    height: 320px;
+      min-width: 240px;
+      height: 320px;
   }
-
-  .app__gallery-images_arrows {
-    padding: 35% 1%;
+  
+  .app__gallery-images_arrows{
+    padding: 20% 3% 35% 3%;
   }
 }
