--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -1,80 +1,40 @@
-.app__aboutus {
-  position: relative;
-}
-
-.app__aboutus-overlay {
-  position: absolute;
-  inset: 0;
-}
-
-.app__aboutus-overlay img {
-  width: 391px;
-  height: 415px;
-  z-index: 0;
-}
-
-.app__aboutus-content {
-  width: 100%;
-  z-index: 2;
-}
-
-.app__aboutus-content_about {
-  flex: 1;
+.app__laurels_awards {
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  flex-direction: column;
-
-  text-align: right;
+  justify-content: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 3rem;
 }
 
-.app__aboutus-content_knife {
-  margin: 2rem 4rem;
-}
-
-.app__aboutus-content_knife img {
-  height: 910px;
-}
-
-.app__aboutus-content_history {
+.app__laurels_awards-card {
   flex: 1;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+  min-width: 230px;
+  margin: 1rem;
+}
+
+.app__laurels_awards-card img {
+  width: 50px;
+  height: 50px;
+}
+
+.app__laurels_awards-card_content {
+  display: flex;
   flex-direction: column;
-
-  text-align: left;
+  margin-left: 1rem;
 }
 
-.app__aboutus-content_about p,
-.app__aboutus-content_history p {
-  margin: 2rem 0;
-}
-
-@media screen and (min-width: 2000px) {
-  .app__aboutus-content_knife img {
-      height: 1110px;
-  }
-
-  .app__aboutus-content_about p,
-  .app__aboutus-content_history p {
-      margin: 4rem 0;
+@media screen and (min-width: 1900px) {
+  .app__laurels_awards-card {
+    min-width: 390px;
   }
 }
 
-@media screen and (max-width: 900px) {
-  .app__aboutus-content {
-      flex-direction: column;
-  }
-
-  .app__aboutus-content_knife {
-      margin: 4rem 0;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .app__aboutus-overlay img {
-      width: 80%;
-      height: 320px;
+@media screen and (max-width: 450px) {
+  .app__laurels_awards-card {
+    min-width: 100%;
+    margin: 1rem 0;
   }
 }
