--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -1,4 +1,4 @@
-.app__laurels_awards {
+.app__aboutus_title {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -6,7 +6,7 @@
   margin-top: 3rem;
 }
 
-.app__laurels_awards-card {
+.app__aboutus_title-card {
   flex: 1;
   display: flex;
   justify-content: flex-start;
@@ -15,25 +15,25 @@
   margin: 1rem;
 }
 
-.app__laurels_awards-card img {
+.app__aboutus_title-card img {
   width: 50px;
   height: 50px;
 }
 
-.app__laurels_awards-card_content {
+.app__aboutus_title-card_content {
   display: flex;
   flex-direction: column;
   margin-left: 1rem;
 }
 
 @media screen and (min-width: 1900px) {
-  .app__laurels_awards-card {
+  .app__aboutus_title-card {
     min-width: 390px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .app__laurels_awards-card {
+  .app__aboutus_title-card {
     min-width: 100%;
     margin: 1rem 0;
   }
