--- a/src/container/Motivation/Motivation.css
+++ b/src/container/Motivation/Motivation.css
@@ -1,28 +1,28 @@
-.app__chef-content {
+.app__motivation-content {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin-top: 4rem;
 }
 
-.app__chef-content_quote {
+.app__motivation-content_quote {
     display: flex;
     justify-self: flex-start;
     align-items: flex-end;
 }
 
-.app__chef-content_quote img {
+.app__motivation-content_quote img {
     width: 47px;
     height: 40px;
     margin: 0 1rem 1rem 0;
 }
 
-.app__chef-sign {
+.app__motivation-sign {
     width: 100%;
     margin-top: 1rem;
 }
 
-.app__chef-sign p:first-child {
+.app__motivation-sign p:first-child {
     font-family: var(--font-base);
     font-weight: 400;
     font-size: 32px;
@@ -32,19 +32,19 @@
     color: var(--color-golden);
 }
 
-.app__chef-sign img {
+.app__motivation-sign img {
     width: 250px;
     margin-top: 3rem;
 }
 
 @media screen and (max-width: 2000px) {
-    .app__chef-sign img{
+    .app__motivation-sign img{
         width: 100px;
     }
 }
 
 @media screen and (max-width: 450px) {
-    .app__chef-sign img{
+    .app__motivation-sign img{
         width: 50px;
     }
 }
