--- a/src/components/PriceItem/PriceItem.css
+++ b/src/components/PriceItem/PriceItem.css
@@ -23,7 +23,7 @@
 .app__priceitem-dash {
   width: 90px;
   height: 1px;
-  background: var(--color-golden);
+  background: var(--color-mint);
   margin: 0 1rem;
 }
 
