--- a/src/container/Motivation/Motivation.css
+++ b/src/container/Motivation/Motivation.css
@@ -29,7 +29,7 @@
     line-height: 41px;
     letter-spacing: 0.04em;
     text-transform: capitalize;
-    color: var(--color-golden);
+    color: var(--color-mint);
 }
 
 .app__motivation-sign img {
