--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,7 +5,7 @@
   z-index: 3;
   justify-content: space-between;
   align-items: center;
-  background: var(--color-black_navbar);
+  background: var(--color-brown_navbar);
   padding: 1rem 2rem;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .app__navbar-links li:hover {
-  color: var(--color-golden);
+  color: var(--color-mint);
 }
 
 .app__navbar-login {
@@ -50,7 +50,7 @@
 }
 
 .app__navbar-login a:hover {
-  border-bottom: 1px solid var(--color-golden);
+  border-bottom: 1px solid var(--color-mint);
 }
 
 .app__navbar-login div {
@@ -69,7 +69,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: var(--color-black);
+  background: var(--color-brown);
   transition: .5s ease;
 
   flex-direction: column;
@@ -78,7 +78,7 @@
 
 .app__navbar-smallscreen_overlay .overlay__close {
   font-size: 27px;
-  color: var(--color-golden);
+  color: var(--color-mint);
   cursor: pointer;
 
   position: absolute;
@@ -93,7 +93,7 @@
 .app__navbar-smallscreen_links li {
   margin: 2rem;
   cursor: pointer;
-  color: var(--color-golden);
+  color: var(--color-mint);
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-base);
