--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -1,7 +1,7 @@
 .app__gallery {
   flex-direction: row;
 
-  background: var(--color-black);
+  background: var(--color-brown);
   padding: 4rem 0 4rem 6rem;
 }
 
@@ -86,16 +86,16 @@
 
 .gallery__arrow-icon {
   color: var(--color-white);
-  /* color: var(--color-golden); */
+  /* color: var(--color-mint); */
   font-size: 2rem;
   cursor: pointer;
-  background: var(--color-black);
-  border: 1px solid var(--color-golden);
+  background: var(--color-brown);
+  border: 1px solid var(--color-mint);
   border-radius: 50px;
 }
 
 .gallery__arrow-icon:hover {
-  color: var(--color-golden);
+  color: var(--color-mint);
 }
 
 @media screen and (min-width: 2000px) {
