--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,7 @@
 }
 
 .app__bg {
-  /* background: url("./assets/test__bg.png"); */
   background: url("./assets/bg.jpg");
-  /* background-color: rgb(105, 105, 105); */
-  /* background: url('./assets/bg.png'); */
   background-position: center;
   background-size: cover;
   background-repeat: repeat;
@@ -56,8 +53,8 @@
 }
 
 .custom__button {
-  background-color: var(--color-crimson);
-  color: var(--color-black);
+  background-color: var(--color-mint_button);
+  color: var(--color-brown);
   font-family: var(--font-base);
   font-weight: 700;
   letter-spacing: 0.04em;
@@ -70,7 +67,7 @@
   cursor: pointer;
 }
 
-.p__cormorant {
+.p_syne_mono {
   font-family: var(--font-base);
   color: var(--color-white);
   font-weight: 700;
@@ -81,7 +78,7 @@
   font-size: 23px;
 }
 
-.p__opensans {
+.p_inconsolata {
   font-family: var(--font-alt);
   color: var(--color-white);
   font-weight: 400;
@@ -91,48 +88,40 @@
   font-size: 20px;
 }
 
-.headtext__cormorant {
+.headtext__syne_mono_mint {
   font-family: var(--font-base);
-  color: var(--color-golden);
+  color: var(--color-mint);
   font-size: 64px;
   line-height: 83.2px;
   letter-spacing: 0.04em;
   text-transform: capitalize;
 }
 
-.headtext__cormorant_tets {
+.headtext__syne_mono_brown {
   font-family: var(--font-base);
-  color: var(--color-black);
+  color: var(--color-brown);
   font-size: 64px;
   line-height: 83.2px;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-}
-
-.spoon__img {
-  width: 45px;
 }
 
 @media screen and (min-width: 2000px) {
   .custom__button,
-  .p__cormorant {
+  .p_syne_mono {
     font-size: 37px;
     line-height: 67px;
   }
 
-  .p__opensans {
+  .p_inconsolata {
     font-size: 30px;
     line-height: 50px;
   }
 
-  .headtext__cormorant,
-  .headtext__cormorant_tets {
+  .headtext__syne_mono_mint,
+  .headtext__syne_mono_brown {
     font-size: 150px;
     line-height: 210px;
-  }
-
-  .spoon__img {
-    width: 80px;
   }
 }
 
@@ -171,26 +160,26 @@
     padding: 4rem 2rem;
   }
 
-  .p__cormorant {
+  .p_syne_mono {
     font-size: 21px;
   }
 
-  .p__opensans {
+  .p_inconsolata {
     font-size: 20px;
   }
 }
 
 @media screen and (max-width: 450px) {
-  .p__opensans {
+  .p_inconsolata {
     font-size: 15px;
   }
 
-  .p__cormorant {
+  .p_syne_mono {
     font-size: 19px;
   }
 
-  .headtext__cormorant,
-  .headtext__cormorant_tets {
+  .headtext__syne_mono_mint,
+  .headtext__syne_mono_brown {
     font-size: 45px;
     line-height: 70px;
   }
